Update DotA name

--- a/Dota_2.history.yaml
+++ b/Dota_2.history.yaml
@@ -1,4 +1,4 @@
-game: Dota 2
+game: DotA 2
 entries:
   - timestamp: 1970-11-12T01:11:12.130000000+02:00
     winner: ["Bania", "j", "hypys", "Spawek"]
